--- a/kitei-rules/pom.xml
+++ b/kitei-rules/pom.xml
@@ -24,7 +24,7 @@
 
   <groupId>org.kitei.internal</groupId>
   <artifactId>kitei-rules</artifactId>
-  <version>1</version>
+  <version>2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>kitei-rules</name>
@@ -39,7 +39,7 @@
     <connection>scm:git:git://github.com/kitei/kitei-policy.git</connection>
     <developerConnection>scm:git:git@github.com:kitei/kitei-policy.git</developerConnection>
     <url>https://github.com/kitei/kitei-policy/</url>
-    <tag>kitei-policy-1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <licenses>
