--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <groupId>org.kitei.internal</groupId>
   <artifactId>kitei-policy</artifactId>
-  <version>1</version>
+  <version>2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>kitei-policy</name>
@@ -38,7 +38,7 @@
     <connection>scm:git:git://github.com/kitei/kitei-policy.git</connection>
     <developerConnection>scm:git:git@github.com:kitei/kitei-policy.git</developerConnection>
     <url>https://github.com/kitei/kitei-policy/</url>
-    <tag>kitei-policy-1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <licenses>
@@ -66,7 +66,7 @@
     <basepom.check.skip-all>true</basepom.check.skip-all>
     <basepom.check.skip-license>false</basepom.check.skip-license>
 
-    <dep.kitei-rules.version>1</dep.kitei-rules.version>
+    <dep.kitei-rules.version>2-SNAPSHOT</dep.kitei-rules.version>
   </properties>
 
   <build>
