--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.basepom</groupId>
     <artifactId>basepom-standard-oss</artifactId>
-    <version>3</version>
+    <version>4</version>
   </parent>
 
   <groupId>org.kitei.internal</groupId>
@@ -65,8 +65,6 @@
   <properties>
     <basepom.check.skip-all>true</basepom.check.skip-all>
     <basepom.check.skip-license>false</basepom.check.skip-license>
-
-    <dep.kitei-rules.version>2-SNAPSHOT</dep.kitei-rules.version>
   </properties>
 
   <build>
@@ -76,28 +74,8 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <configuration>
+            <!-- move to basepom.release.tag-name-format after basepom 5 -->
             <tagNameFormat>kitei-policy-@{project.version}</tagNameFormat>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>com.mycila</groupId>
-          <artifactId>license-maven-plugin</artifactId>
-          <dependencies>
-            <dependency>    
-              <groupId>org.kitei.internal</groupId>
-              <artifactId>kitei-rules</artifactId>
-              <version>${dep.kitei-rules.version}</version>
-            </dependency>
-          </dependencies>
-          <!-- license and xml header from the rules jar -->
-          <configuration>
-            <header>license/apache-license-header.txt</header>
-            <headerDefinitions>
-              <headerDefinition>license/xml-prefix.xml</headerDefinition>
-            </headerDefinitions>
-            <mapping>
-              <xml>XML_PREFIX</xml>
-            </mapping>
           </configuration>
         </plugin>
       </plugins>
