--- a/kitei-root/pom.xml
+++ b/kitei-root/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.basepom</groupId>
     <artifactId>basepom-standard-oss</artifactId>
-    <version>4</version>
+    <version>5-SNAPSHOT</version>
     <relativePath />
   </parent>
 
