--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.basepom</groupId>
     <artifactId>basepom-standard-oss</artifactId>
-    <version>4</version>
+    <version>5</version>
   </parent>
 
   <groupId>org.kitei.internal</groupId>
@@ -65,20 +65,6 @@
   <properties>
     <basepom.check.skip-all>true</basepom.check.skip-all>
     <basepom.check.skip-license>false</basepom.check.skip-license>
+    <basepom.release.tag-name-format>kitei-policy-@{project.version}</basepom.release.tag-name-format>
   </properties>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <configuration>
-            <!-- move to basepom.release.tag-name-format after basepom 5 -->
-            <tagNameFormat>kitei-policy-@{project.version}</tagNameFormat>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
 </project>
