--- a/kitei-rules/pom.xml
+++ b/kitei-rules/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>org.kitei.internal</groupId>
   <artifactId>kitei-rules</artifactId>
-  <version>3</version>
+  <version>4-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>kitei-rules</name>
@@ -40,7 +40,7 @@
     <connection>scm:git:git://github.com/kitei/kitei-policy.git</connection>
     <developerConnection>scm:git:git@github.com:kitei/kitei-policy.git</developerConnection>
     <url>https://github.com/kitei/kitei-policy/</url>
-    <tag>kitei-policy-3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <licenses>
