--- a/kitei-root/pom.xml
+++ b/kitei-root/pom.xml
@@ -12,158 +12,190 @@
 ~   See the License for the specific language governing permissions and
 ~   limitations under the License.
 -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.basepom</groupId>
-    <artifactId>basepom-standard-oss</artifactId>
-    <version>5</version>
-    <relativePath />
-  </parent>
+    <parent>
+        <groupId>org.basepom</groupId>
+        <artifactId>basepom-standard-oss</artifactId>
+        <version>6-SNAPSHOT</version>
+        <relativePath />
+    </parent>
 
-  <groupId>org.kitei.internal</groupId>
-  <artifactId>kitei-root</artifactId>
-  <version>4-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <groupId>org.kitei.internal</groupId>
+    <artifactId>kitei-root</artifactId>
+    <version>4-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-  <name>kitei-root</name>
-  <description>
-    Build policy and rules applied to all Kitei code.
-  </description>
+    <name>kitei-root</name>
+    <description>
+        Build policy and rules applied to all Kitei code.
+    </description>
 
-  <inceptionYear>2013</inceptionYear>
+    <inceptionYear>2013</inceptionYear>
 
-  <scm>
-    <connection>scm:git:git://github.com/kitei/kitei-policy.git</connection>
-    <developerConnection>scm:git:git@github.com:kitei/kitei-policy.git</developerConnection>
-    <url>https://github.com/kitei/kitei-policy/</url>
-    <tag>HEAD</tag>
-  </scm>
+    <scm>
+        <connection>scm:git:git://github.com/kitei/kitei-policy.git</connection>
+        <developerConnection>scm:git:git@github.com:kitei/kitei-policy.git</developerConnection>
+        <url>https://github.com/kitei/kitei-policy/</url>
+        <tag>HEAD</tag>
+    </scm>
 
-  <licenses>
-    <license>
-      <name>Apache License 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-  <developers>
-    <developer>
-      <id>hgschmie</id>
-      <name>Henning Schmiedehausen</name>
-      <timezone>-8</timezone>
-    </developer>
-  </developers>
+    <developers>
+        <developer>
+            <id>hgschmie</id>
+            <name>Henning Schmiedehausen</name>
+            <timezone>-8</timezone>
+        </developer>
+    </developers>
 
-  <properties>
-    <dep.kitei-rules.version>4-SNAPSHOT</dep.kitei-rules.version>
-    <dep.kitei-lessio.version>2.0</dep.kitei-lessio.version>
-  </properties>
+    <properties>
+        <dep.kitei-rules.version>4-SNAPSHOT</dep.kitei-rules.version>
+        <dep.kitei-lessio.version>2.0</dep.kitei-lessio.version>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.kitei.testing</groupId>
-      <artifactId>kitei-lessio</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+        <!-- CI profile -->
+        <basepom.check.skip-findbugs>true</basepom.check.skip-findbugs>
+        <basepom.check.skip-pmd>true</basepom.check.skip-pmd>
+        <basepom.check.skip-checkstyle>true</basepom.check.skip-checkstyle>
 
-  <dependencyManagement>
+        <!-- Enforce CI on release build -->
+        <basepom.release.profiles>oss-release,ci</basepom.release.profiles>
+    </properties>
+
     <dependencies>
-      <dependency>
-        <groupId>org.kitei.testing</groupId>
-        <artifactId>kitei-lessio</artifactId>
-        <version>${dep.kitei-lessio.version}</version>
-      </dependency>
+        <dependency>
+            <groupId>org.kitei.testing</groupId>
+            <artifactId>kitei-lessio</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-  </dependencyManagement>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>com.mycila</groupId>
-          <artifactId>license-maven-plugin</artifactId>
-          <dependencies>
-            <dependency>    
-              <groupId>org.kitei.internal</groupId>
-              <artifactId>kitei-rules</artifactId>
-              <version>${dep.kitei-rules.version}</version>
-            </dependency>
-          </dependencies>
-          <!-- license header from the rules jar -->
-          <configuration>
-            <header>license/kitei-apache-license-header.txt</header>
-          </configuration>
-        </plugin>
-
-        <!-- Load the pmd rules from the kitei-rules jar -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-pmd-plugin</artifactId>
-          <dependencies>
+    <dependencyManagement>
+        <dependencies>
             <dependency>
-              <groupId>org.kitei.internal</groupId>
-              <artifactId>kitei-rules</artifactId>
-              <version>${dep.kitei-rules.version}</version>
+                <groupId>org.kitei.testing</groupId>
+                <artifactId>kitei-lessio</artifactId>
+                <version>${dep.kitei-lessio.version}</version>
             </dependency>
-          </dependencies>
-          <configuration>
-            <rulesets>
-              <ruleset>pmd/kitei.xml</ruleset>
-            </rulesets>
-          </configuration>
-        </plugin>
+        </dependencies>
+    </dependencyManagement>
 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-enforcer-plugin</artifactId>
-          <configuration>
-            <rules>
-              <bannedDependencies>
-                <excludes combine.children="append">
-                  <!-- use kitei lessio -->
-                  <exclude>com.nesscomputing.testing:kawala-lessio</exclude>
-                </excludes>
-              </bannedDependencies>
-              <requireFilesDontExist>
-                <!-- Make sure that none of the jar sneak in a log4j config file -->
-                <files>
-                  <file>${basedir}/src/test/resources/log4j.xml</file>
-                  <file>${basedir}/src/test/resources/log4j.properties</file>
-                </files>
-              </requireFilesDontExist>
-            </rules>
-          </configuration>
-        </plugin>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.mycila</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <dependencies>
+                        <dependency>    
+                            <groupId>org.kitei.internal</groupId>
+                            <artifactId>kitei-rules</artifactId>
+                            <version>${dep.kitei-rules.version}</version>
+                        </dependency>
+                    </dependencies>
+                    <!-- license header from the rules jar -->
+                    <configuration>
+                        <header>license/kitei-apache-license-header.txt</header>
+                    </configuration>
+                </plugin>
 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <dependencies>
-            <dependency>
-              <groupId>org.kitei.testing</groupId>
-              <artifactId>kitei-lessio</artifactId>
-              <version>${dep.kitei-lessio.version}</version>
-            </dependency>
-          </dependencies>
-          <configuration>
-            <argLine>
-              ${argLine}
-              -Djava.security.manager=org.kitei.testing.lessio.LessIOSecurityManager
-              -Dfile.encoding=${project.build.sourceEncoding}
-            </argLine>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+                <!-- Load the pmd rules from the kitei-rules jar -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-pmd-plugin</artifactId>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.kitei.internal</groupId>
+                            <artifactId>kitei-rules</artifactId>
+                            <version>${dep.kitei-rules.version}</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <rulesets>
+                            <ruleset>pmd/kitei.xml</ruleset>
+                        </rulesets>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <configuration>
+                        <rules>
+                            <bannedDependencies>
+                                <excludes combine.children="append">
+                                    <!-- use kitei lessio -->
+                                    <exclude>com.nesscomputing.testing:kawala-lessio</exclude>
+                                </excludes>
+                            </bannedDependencies>
+                            <requireFilesDontExist>
+                                <!-- Make sure that none of the jar sneak in a log4j config file -->
+                                <files>
+                                    <file>${basedir}/src/test/resources/log4j.xml</file>
+                                    <file>${basedir}/src/test/resources/log4j.properties</file>
+                                </files>
+                            </requireFilesDontExist>
+                        </rules>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.kitei.testing</groupId>
+                            <artifactId>kitei-lessio</artifactId>
+                            <version>${dep.kitei-lessio.version}</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <argLine>
+                            ${argLine}
+                            -Djava.security.manager=org.kitei.testing.lessio.LessIOSecurityManager
+                            -Dfile.encoding=${project.build.sourceEncoding}
+                        </argLine>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <profiles>
+        <!-- Continuous integration profile, enables additional checks: findbugs, pmd, checkstyle -->
+        <profile>
+            <id>ci</id>
+            <properties>
+                <basepom.check.skip-findbugs>false</basepom.check.skip-findbugs>
+                <basepom.check.skip-pmd>false</basepom.check.skip-pmd>
+                <basepom.check.skip-checkstyle>false</basepom.check.skip-checkstyle>
+            </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <testFailureIgnore>true</testFailureIgnore>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+    </profiles>
 </project>
