--- a/kitei-rules/pom.xml
+++ b/kitei-rules/pom.xml
@@ -18,13 +18,13 @@
     <parent>
         <groupId>org.basepom</groupId>
         <artifactId>basepom-standard-oss</artifactId>
-        <version>6-SNAPSHOT</version>
+        <version>6</version>
         <relativePath />
     </parent>
 
     <groupId>org.kitei.internal</groupId>
     <artifactId>kitei-rules</artifactId>
-    <version>4-SNAPSHOT</version>
+    <version>4</version>
     <packaging>jar</packaging>
 
     <name>kitei-rules</name>
@@ -39,7 +39,7 @@
         <connection>scm:git:git://github.com/kitei/kitei-policy.git</connection>
         <developerConnection>scm:git:git@github.com:kitei/kitei-policy.git</developerConnection>
         <url>https://github.com/kitei/kitei-policy/</url>
-        <tag>HEAD</tag>
+        <tag>kitei-policy-4</tag>
     </scm>
 
     <licenses>
