--- a/kitei-root/pom.xml
+++ b/kitei-root/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.basepom</groupId>
         <artifactId>basepom-oss</artifactId>
-        <version>44</version>
+        <version>45-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -30,9 +30,6 @@
     <properties>
         <project.build.targetJdk>17</project.build.targetJdk>
         <project.build.systemJdk>[17,)</project.build.systemJdk>
-
-        <!-- till next basepom relase -->
-        <dep.spotbugs.version>4.7.0</dep.spotbugs.version>
 
         <dep.kitei-rules.version>8-SNAPSHOT</dep.kitei-rules.version>
 
@@ -55,17 +52,6 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <configuration>
-                        <!-- MDEP-804 -->
-                        <ignoredNonTestScopedDependencies>
-                            <ignoreNonTestScopedDependency>*</ignoreNonTestScopedDependency>
-                        </ignoredNonTestScopedDependencies>
-                    </configuration>
-                </plugin>
-
                 <!-- Load the pmd rules from the kitei-rules jar -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
