use current fluido for sites

--- a/kitei-root/pom.xml
+++ b/kitei-root/pom.xml
@@ -100,12 +100,22 @@
                     </configuration>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.skins</groupId>
+                            <artifactId>maven-fluido-skin</artifactId>
+                            <version>1.11.0</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
 
     <profiles>
-        <!-- Continuous integration profile, enables additional checks: findbugs, pmd, checkstyle -->
         <profile>
             <id>kitei-release</id>
             <properties>
