--- a/kitei-root/pom.xml
+++ b/kitei-root/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.basepom</groupId>
         <artifactId>basepom-oss</artifactId>
-        <version>45-SNAPSHOT</version>
+        <version>45</version>
         <relativePath />
     </parent>
 
