--- a/kitei-build-root/pom.xml
+++ b/kitei-build-root/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>org.kitei.internal</groupId>
     <artifactId>kitei-build-root</artifactId>
-    <version>10</version>
+    <version>11-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>kitei :: internal :: build-root</name>
@@ -45,7 +45,7 @@
         <connection>scm:git:git://github.com/kitei/kitei-policy.git</connection>
         <developerConnection>scm:git:git@github.com:kitei/kitei-policy.git</developerConnection>
         <url>https://github.com/kitei/kitei-policy/</url>
-        <tag>kitei-policy-10</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
